--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,26 +1,104 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
+
+@plugin "@tailwindcss/typography";
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+    --radius: 0;
+    --background: #F9F5F2;
+    --foreground: #000000;
+    --muted: #EFD0D5;
+    --muted-foreground: #A42439;
+    --card: #FFFFFF;
+    --card-foreground: #000000;
+    --popover: #FFFFFF;
+    --popover-foreground: #000000;
+    --border: #000000;
+    --input: #FFFFFF;
+    --primary: #EA435F;
+    --primary-hover: #D00000;
+    --primary-foreground: #FFFFFF;
+    --secondary: #FFDA5C;
+    --secondary-foreground: #000000;
+    --accent: #CEEBFC;
+    --accent-foreground: #000000;
+    --destructive: #D00000;
+    --destructive-foreground: #FFFFFF;
+    --ring: #000000;
+}
+
+.dark {
+    --background: #121014;
+    --foreground: #f5f5f5;
+    --muted: #2d2440;
+    --muted-foreground: #c7b6f3;
+    --card: #1a1820;
+    --card-foreground: #ffffff;
+    --popover: #1a1820;
+    --popover-foreground: #ffffff;
+    --border: #2a2a2e;
+    --input: #2a2a2e;
+    --primary: #C4A1FF;
+    --primary-hover: #9678FF;
+    --primary-foreground: #000000;
+    --secondary: #E7F193;
+    --secondary-foreground: #000000;
+    --accent: #FE91E9;
+    --accent-foreground: #000000;
+    --destructive: #FE3B3B;
+    --destructive-foreground: #ffffff;
+    --ring: #C4A1FF;
+}
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+  }
 }
